z-index fix for symbol table, cleanup
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@39841 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
@@ -5522,19 +5522,27 @@ body>div:nth-child   (4) >div:nth-child   (2) >div>div:nth-child   (2) >table>tb
 	display: block;
 }
 
-.ggbFavorite{
-	float:right;
-}
-
 /*
    ########################################
    ###    END OF MANAGE TOOLS DIALOG    ###
    ######################################## */
 
- .red {
- 	background:red;
- }
- /* make sure popup glass pane hides KB button too*/
- div.openKeyboardButton{
- z-index:99;
- }
+.ggbFavorite{
+	float:right;
+}
+
+
+
+.red {
+	background:red;
+}
+
+/* make sure popup glass pane hides KB button too*/
+div.openKeyboardButton{
+	z-index:99;
+}
+ 
+ 
+div.SymbolTablePopup{
+	z-index:501;
+}
